overflow fixes

--- a/ui-assets/less/style.less
+++ b/ui-assets/less/style.less
@@ -1,3 +1,7 @@
+body {
+ overflow: hidden;
+}
+
 .content {
  position: fixed;
  top: 0;
@@ -5,6 +9,7 @@
  right: 300px;
  bottom: 0;
  overflow-x: auto;
+ overflow-y: hidden;
 
  table {
   width: 100%;
